fixed the card bottom extra padding

--- a/src/components/cards/productCard.scss
+++ b/src/components/cards/productCard.scss
@@ -1,6 +1,6 @@
 .product-card {
-  height: 100%;
-  min-height: 300px;
+  height: 108%;
+  // min-height: 300px;
   width: 100%;
   background-color: white;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
