--- a/src/styles/productView.scss
+++ b/src/styles/productView.scss
@@ -116,11 +116,11 @@
 @media screen and (max-width: 1280px) {
   .card-container {
     .card-data-1 {
-      gap: 30px;
+      gap: 50px;
     }
 
     .card-data-2 {
-      gap: 30px;
+      gap: 50px;
     }
   }
 }
